--- a/css/hero.css
+++ b/css/hero.css
@@ -4,8 +4,18 @@
 .hero-title {
   font-size: 3rem;
   font-weight: 600;
-  color:rgba(56, 189, 248, 0.6)
+
+  background: linear-gradient(
+    135deg,
+    #ffffff 0%,
+    #9ddcff 45%,
+    #38bdf8 100%
+  );
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+ 
 
 
 
@@ -81,7 +91,7 @@
 
 .hero-description {
   font-size: var(--font-size-md);
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 1);
   line-height: 1.8;
   margin-bottom: 2.5rem;
   animation: fadeInUp 1s ease;
